--- a/corehq/apps/userreports/templates/userreports/partials/configure_bar_report_builder.html
+++ b/corehq/apps/userreports/templates/userreports/partials/configure_bar_report_builder.html
@@ -64,6 +64,6 @@
                 );
             });
         };
-        ko.applyBindings(new propertyList(), $(".table.table-condensed.detail-screen-table").parent().get(0));
+        ko.applyBindings(new propertyList(), $("#properties-table").parent().get(0));
     </script>
 {% endblock %}
