--- a/corehq/apps/hqpillow_retry/templates/hqpillow_retry/single.html
+++ b/corehq/apps/hqpillow_retry/templates/hqpillow_retry/single.html
@@ -9,6 +9,10 @@
     {% compress css %}
     <link type="text/less" rel="stylesheet" media="all" href="{% static 'style/less/hqstyle-core.less' %}"/>
     {% endcompress %}
+    {% if less_debug %}
+        <script src="{% static 'style/lib/lessjs/less-1.3.1.min.js' %}"></script>
+        {% if less_watch %}<script>less.watch();</script>{% endif %}
+    {% endif %}
     <script src="{% static 'hqstyle/js/jquery/jquery-1.8.2.min.js' %}"></script>
     <script type="text/javascript">
         function performAction(action) {
