(FB: 151548) - Fix MM when read-only user
When user is read-only a few errors were occurring. The first in
app-settings.html. selectionOption() would return null and then an
error would be thrown when looking .label. The next error was in
main.js when changing tabs. The unattached button had no parent element
so when checking for tagName, an error was thrown.

http://manage.dimagi.com/default.asp?151548#861201

--- a/corehq/apps/app_manager/templates/app_manager/partials/app-settings.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/app-settings.html
@@ -24,7 +24,7 @@
             </span>
         </span>
         <span data-bind="if: !$root.edit()">
-            <span data-bind="text: selectedOption().label"></span>
+            <span data-bind="text: (selectedOption() ? selectedOption().label : '')"></span>
         </span>
     </span>
 </script>
