--- a/corehq/apps/app_manager/templates/app_manager/partials/case_list_properties.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/case_list_properties.html
@@ -2,17 +2,17 @@
 {% load hq_shared_tags %}
 
 <div>
-    <table class="table table-condensed detail-screen-table">
+    <table class="table table-condensed">
         <thead>
             <tr tabindex="999" data-bind="paste: function (data) { pasteCallback(data, 0); }">
-                <th class="detail-screen-icon"></th>
-                <th class="detail-screen-field" data-bind="text: DetailScreenConfig.message.FIELD"></th>
+                <th></th>
+                <th data-bind="text: DetailScreenConfig.message.FIELD"></th>
                 <th data-bind="text: DetailScreenConfig.message.HEADER"></th>
                 <th data-bind="text: DetailScreenConfig.message.FORMAT"></th>
-                <th class="detail-screen-icon"></th>
+                <th></th>
             </tr>
         </thead>
-        <tbody class="detail-screen-columns" data-bind="sortable: {
+        <tbody data-bind="sortable: {
             data: columns,
             afterAdd: function (elem) { $(elem).hide().fadeIn() },
             beforeRemove: function (elem) { $(elem).fadeOut() }
@@ -25,7 +25,7 @@
                 copy: function () { return copyCallback(); },
                 paste: function (data) { $parent.pasteCallback(data, $index() + 1); }
             ">
-                <td class="detail-screen-icon" data-bind="visible: $root.edit">
+                <td data-bind="visible: $root.edit">
                     <span class="sort-disabled" data-bind="ifnot: grip"></span>
                     <i class="grip sortable-handle" data-bind="
                         if: grip,
@@ -36,7 +36,7 @@
                 </td>
 
                 <!--ko if: !isTab -->
-                    <td class="detail-screen-field control-group"
+                    <td class="control-group"
                         data-bind="css: {error: showWarning}">
                         <div data-bind="html: CC_DETAIL_SCREEN.getFieldHtml(field.val()), visible: !field.edit"></div>
                         <div data-bind="jqueryElement: field.ui, visible: field.edit"></div>
@@ -44,7 +44,7 @@
                             <span class="help-inline" data-bind="
                                 text: DetailScreenConfig.field_format_warning_message
                             ">
-                            <span/>
+                            </span>
                         </div>
                     </td>
                     <td data-bind="jqueryElement: header.ui"></td>
@@ -53,7 +53,7 @@
                 <!--ko if: isTab -->
                     <td colspan="3" data-bind="jqueryElement: header.ui"></td>
                 <!--/ko-->
-                <td class="detail-screen-icon">
+                <td>
                     <i style="cursor: pointer;"
                        data-bind="
                         visible: $root.edit && ($parent.columns().length > 1),
