[WIP] Beginings of case tile template feature
- Added feature flag
- Added don't use/do use case tiles select
- Added case tile bucket selects to case properties list

--- a/corehq/apps/app_manager/templates/app_manager/partials/case_list.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/case_list.html
@@ -25,6 +25,12 @@
 </legend>
 
 <div data-bind="with: shortScreen">
+    {% if request|toggle_enabled:'CASE_LIST_TILE' %}
+    <select data-bind="value: useCaseTiles">
+        <option value="no">Don't Use Case Tiles</option>
+        <option value="yes">Use Case Tiles</option>
+    </select>
+    {% endif %}
     {% include 'app_manager/partials/case_list_properties.html' %}
 </div>
 
