[WIP] Save tile configuration on server

--- a/corehq/apps/app_manager/templates/app_manager/partials/case_list_properties.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/case_list_properties.html
@@ -58,7 +58,7 @@
                 <!--/ko-->
                 <!-- ko if: $parent.useCaseTiles() == "yes" -->
                 <td>
-                    <select>
+                    <select data-bind="value: case_tile_field">
                     </select>
                 </td>
                 <!-- /ko -->
