--- a/custom/ilsgateway/templates/ilsgateway/ilsconfig.html
+++ b/custom/ilsgateway/templates/ilsgateway/ilsconfig.html
@@ -149,6 +149,15 @@
                 </div>
             </div>
         </div>
+        <div class="row-fluid">
+            <div class="span12">
+                <div class="btn-toolbar">
+                    <button class="btn" id="delete_runs">
+                        {% trans "Delete reports runs" %}
+                    </button>
+                </div>
+            </div>
+        </div>
     {% endif %}
 {% endblock %}
 
@@ -195,6 +204,12 @@
         $("#resync_passwords").click(function() {
             var url = '{% url 'ils_resync_passwords' domain %}';
             var successMessage = "{% trans "Resync started" %}";
+            _post(this, url, {success: successMessage});
+        });
+
+        $("#delete_runs").click(function() {
+            var url = '{% url 'delete_runs' domain %}';
+            var successMessage = "{% trans "Started" %}";
             _post(this, url, {success: successMessage});
         });
     </script>
