Renamed form field

--- a/corehq/apps/userreports/templates/userreports/partials/report_filter_configuration.html
+++ b/corehq/apps/userreports/templates/userreports/partials/report_filter_configuration.html
@@ -69,4 +69,4 @@ TODO:
         </tr>
     </tbody>
 </table>
-<input name="sort_properties" type="hidden" data-bind="value: serializedSortProperties">
+<input name="filters" type="hidden" data-bind="value: serializedFilterProperties">
