--- a/corehq/apps/products/templates/products/manage/products.html
+++ b/corehq/apps/products/templates/products/manage/products.html
@@ -80,7 +80,7 @@
         </div>
     </div>
 
-    <div class="row-fluid" data-bind="visible: !initial_load()">
+    <div class="row-fluid" data-bind="visible: !initial_load() || currently_searching()">
         <div class="span12">
             <img src="{% static 'hqwebapp/img/ajax-loader.gif' %}" alt="loading indicator" />
             {% trans 'Loading products...' %}
@@ -106,14 +106,14 @@
 
         <div class="row-fluid">
             <div class="span12">
-                <div id="user-list-notification" data-bind="visible: !data_list().length" class="alert alert-info">
+                <div id="user-list-notification" data-bind="visible: !currently_searching() && !data_list().length" class="alert alert-info">
                     {% if show_inactive %}
                         {% blocktrans %}There are no inactive products for this project.{% endblocktrans %}
                     {% else %}
                         {% blocktrans %}There are no products for this project yet.{% endblocktrans %}
                     {% endif %}
                 </div>
-                <table data-bind="visible: data_list().length + archive_action_items().length > 0" class="table table-striped table-bordered" style="margin-bottom:0">
+                <table data-bind="visible: !currently_searching() && (data_list().length + archive_action_items().length > 0)" class="table table-striped table-bordered" style="margin-bottom:0">
                     <thead data-bind="visible: data_list().length > 0">
                         <tr>
                             <th></th>
