--- a/corehq/apps/app_manager/templates/app_manager/partials/case_list.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/case_list.html
@@ -30,6 +30,10 @@
         <option value="no">Don't Use Case Tiles</option>
         <option value="yes">Use Case Tiles</option>
     </select>
+    <label class="checkbox" data-bind="visible: useCaseTiles() == 'yes'">
+        <input type="checkbox" data-bind="checked: persistTileOnForms">
+        Use this case list tile persistently in forms
+    </label>
     {% endif %}
     {% include 'app_manager/partials/case_list_properties.html' %}
 </div>
