--- a/corehq/apps/userreports/templates/userreports/partials/configure_bar_report_builder.html
+++ b/corehq/apps/userreports/templates/userreports/partials/configure_bar_report_builder.html
@@ -45,7 +45,7 @@
         var propertyList = function() {
             var that = this;
 
-            this.formatOptions = ko.observableArray(["Plain", "Date"]);
+            this.formatOptions = ko.observableArray(["Choice", "Date", "Numeric"]);
             this.propertyOptions = ko.observableArray({{ case_properties|JSON }});
             this.columns = ko.observableArray([new PropertyListItem()]);
             this.serializedFilterProperties = ko.computed(function(){
