--- a/corehq/apps/userreports/templates/userreports/partials/report_filter_configuration.html
+++ b/corehq/apps/userreports/templates/userreports/partials/report_filter_configuration.html
@@ -9,7 +9,7 @@ TODO:
 
 
 {# Is it bad to inline this style? #}
-<table id="properties-table" class="table table-condensed" style="display: inline-block">
+<table class="table table-condensed" style="display: inline-block">
 
     <thead>
         <tr>
@@ -69,4 +69,3 @@ TODO:
         </tr>
     </tbody>
 </table>
-<input name="filters" type="hidden" data-bind="value: serializedFilterProperties">
